iOS/Resources/styleSheet.css
:root {
	color-scheme: light dark;
	font: -apple-system-body;
	font-size: [[font-size]]px;
}

body {
	margin-top: 3px;
	margin-bottom: 20px;
	margin-left: auto;
	margin-right: auto;
	padding-left: 20px;
	padding-right: 20px;

	word-wrap: break-word;
	word-break: break-word;
	-webkit-hyphens: auto;
	-webkit-text-size-adjust: none;

	max-width: 44em;
}

a {
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
.feedlink {
	font-weight: bold;
}
.headerTable {
	width: 100%;
	height: 68px;
}

.systemMessage {
	position: absolute;
	top: 45%;
	left: 50%;
	transform: translateX(-55%) translateY(-50%);
}

:root {
	color-scheme: light dark;
	--primary-accent-color: #086AEE;
	--secondary-accent-color: #086AEE;
	--block-quote-border-color: rgba(8, 106, 238, 0.75);
	--header-table-border-color: rgba(0, 0, 0, 0.1);
	--header-color: rgba(0, 0, 0, 0.3);
	--body-code-color: #666;
	--system-message-color: #cbcbcb;
	--feedlink-color: rgba(0, 0, 0, 0.6);
	--article-title-color: #333;
	--table-cell-border-color: lightgray;
}

@media(prefers-color-scheme: dark) {
	:root {
		--primary-accent-color: #2D80F1;
		--secondary-accent-color: #5E9EF4;
		--block-quote-border-color: rgba(94, 158, 244, 0.75);
		--header-table-border-color: rgba(255, 255, 255, 0.2);
		--header-color: #d2d2d2;
		--body-code-color: #b2b2b2;
		--system-message-color: #5f5f5f;
		--article-title-color: #e0e0e0;
		--table-cell-border-color: dimgray;
	}
}

body {
	color: var(--body-color);
	background-color: var(--body-background-color);
}

body a, body a:link, body a:visited {
	color: var(--secondary-accent-color);
}
body .headerTable {
	border-bottom: 1px solid var(--header-table-border-color);
}
body .header {
	font: -apple-system-body;
	font-size: [[font-size]]px;
	color: var(--header-color);
}
body .header a:link, body .header a:visited {
	color: var(--primary-accent-color);
}
body .articleDateline, body .articleDateLine.a:link, body .articleDateline a:visited {
	color: var(--header-color);
}

body code, body pre {
	color: var(--body-code-color);
}

body > .systemMessage {
	color: var(--system-message-color);
}

.feedlink a:link, .feedlink a:visited {
	color: var(--feed-link-color);
}
.avatar img {
	border-radius: 4px;
	max-width: none;
}
.feedIcon {
	border-radius: 4px;
}
.rightAlign {
	text-align: right;
}
.leftAlign {
	text-align: left;
}

.articleTitle a:link, .articleTitle a:visited {
	color: var(--article-title-color);
	margin-top: 26px;
}

.articleDateline {
	margin-bottom: 25px;
	font-weight: bold;
}

.articleDateline a:link, .articleDateline a:visited {
	color: var(--article-title-color);
}

.articleBody {
	line-height: 1.6em;
}
h1 {
	line-height: 1.15em;
	font-weight: bold;
}
pre {
	max-width: 100%;
	margin: 0;
	overflow: auto;
	overflow-y: hidden;
	line-height: 1.4286em;
	border: 1px solid var(--secondary-accent-color);
	padding: 5px;
	word-wrap: normal;
	word-break: normal;
}
code, pre {
	font-family: "SF Mono", Menlo, "Courier New", Courier, monospace;
	font-size: .8235rem;
	-webkit-hyphens: none;
}

.nnw-overflow {
	overflow-x: auto;
}
/*
 Instead of the last-child bits, border-collapse: collapse
 could have been used. However, then the inter-cell borders
 overlap the table border, which looks bad.
 */
.nnw-overflow table {
	margin-bottom: 1px;
	border-spacing: 0;
	border: 1px solid var(--secondary-accent-color);
	font-size: inherit;
}
.nnw-overflow table table {
	margin-bottom: 0;
	border: none;
}
.nnw-overflow td, .nnw-overflow th {
	-webkit-hyphens: none;
	word-break: normal;
	border: 1px solid var(--table-cell-border-color);
	border-top: none;
	border-left: none;
	padding: 5px;
}
.nnw-overflow tr td:last-child, .nnw-overflow tr th:last-child {
	border-right: none;
}
.nnw-overflow tr:last-child td, .nnw-overflow tr:last-child th {
	border-bottom: none;
}
.nnw-overflow td pre {
	border: none;
	padding: 0;
}

img, figure, iframe, div {
	max-width: 100%;
	height: auto !important;
	margin: 0 auto;
}

figure {
	margin-bottom: 1em;
	margin-top: 1em;
}

video {
    width: 100% !important;
    height: auto !important;
	margin: 0 auto;
}

figcaption {
	font-size: 14px;
	line-height: 1.3em;
}

sup {
	vertical-align: top;
	position: relative;
	bottom: 0.2rem;
}

sub {
	vertical-align: bottom;
	position: relative;
	top: 0.2rem;
}

.iframeWrap {
	position: relative;
	display: block;
	padding-top: 56.25%;
}

.activityIndicatorWrap {
	position: relative;
}

.activityIndicator {
	z-index: 1;
	width: 64px;
	height: 64px;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.iframeWrap iframe {
	position: absolute;
	top: 0;
	left: 0;
	height: 100% !important;
	width: 100% !important;
}

blockquote {
	margin-inline-start: 0;
	margin-inline-end: 0;
	padding-left: 15px;
	border-left: 3px solid var(--block-quote-border-color);
}

/* Feed Specific */

.feedbin--article-wrap {
	border-top: 1px solid var(--header-table-border-color);
}

.wp-smiley {
   height: 1em;
   max-height: 1em;
}

/*Block ads and junk*/

iframe[src*="feedads"],
iframe[src*="doubleclick"],
iframe[src*="plusone.google"] {
	display: none !important;
}

a[href*=".ads."],
a[href*="feedads"],
a[href*="doubleclick"],
a[href*="//ads."],
a[href*="api.tweetmeme"],
a[href*="delicious.com/post?"],
a[href*="digg.com/submit?"],
a[href*="google.com/bookmarks/mark?"],
a[href*="posterous.com/share?"],
a[href*="tumblr.com/share?"],
a[href*="linkedin.com/shareArticle?"],
a[href*="facebook.com/share.php?"],
a[href*="http://twitter.com/home?"],
a[href*="addtoany.com/share_save"] {
	display: none !important;
}

img[src*=".ads."],
img[src*="//ads."],
img[src*="doubleclick"],
img[src*="feedads"],
img[src*="feedburner"],
img[src*="feedblitz"],
img[src*="share-buttons"] {
	display: none !important;
}

/* Newsfoot specific styles. Structural styles come first, theme styles second */
.newsfoot-footnote-container {
	position: relative;
	display: inline-block;
	z-index: 9999;
}
.newsfoot-footnote-popover {
	position: absolute;
	display: block;
	padding: 0em 1em;
	margin: 1em;
	left: calc(-1 * (50vw - 1em));
	right: calc(-1 * (50vw - 1em));
	top: 0.75em;
	max-width: none;
	border-radius: 0.3em;
	box-sizing: border-box;
}

.newsfoot-footnote-popover-arrow {
	content: '';
	display: block;
	width: 1em;
	position: absolute;
	top: -0.5em;
	left: calc(50% - 0.5em);
	height: 1em !important;
	transform: rotate(45deg);
	z-index:0;
}
.newsfoot-footnote-popover-inner {
	border-radius: calc(0.3em - 1px);
	padding: 1em;
	position: relative;
	z-index: 1;
}

.newsfoot-footnote-popover-inner :first-child {
	margin-top: 0;
}
.newsfoot-footnote-popover-inner :last-child {
	margin-bottom: 0;
}

.newsfoot-footnote-popover .reversefootnote,
.newsfoot-footnote-popover .footnoteBackLink,
.newsfoot-footnote-popover .footnote-return {
	display: none;
}

sup[id^='fn'] {
	vertical-align: baseline;
}

a.footnote {
	display: inline-block;
	text-decoration: none;
	padding: 0.05em 0.75em;
	border-radius: 1em;
	min-width: 1em;
	text-align: center;
	font-size: 0.8em;
	line-height: 1em;
	position:relative;
	top: -0.1em;
}

/* light / default */
.newsfoot-footnote-popover {
	background: #ccc;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.25);
	color: black;
	padding: 1px;
}
.newsfoot-footnote-popover-arrow {
	background: #fafafa;
	border: 1px solid #ccc;
}
.newsfoot-footnote-popover-inner {
	background: #fafafa;
}
body a.footnote,
body a.footnote:visited,
.newsfoot-footnote-popover + a.footnote:hover {
	background: #aaa;
	color: white;
	transition: background-color 200ms ease-out;
}
a.footnote:hover,
.newsfoot-footnote-popover + a.footnote {
	background: #666;
	transition: background-color 200ms ease-out;
}


/* dark */
@media screen and (prefers-color-scheme: dark) {
	.newsfoot-footnote-popover {
		background: #444;
		color: rgb(224, 224, 224);
	}
	.newsfoot-footnote-popover-arrow {
		background: #242424;
		border: 1px solid #444;
	}
	.newsfoot-footnote-popover-inner {
		background: #242424;
	}
	body a.footnote,
	body a.footnote:visited,
	.newsfoot-footnote-popover + a.footnote:hover {
		background: #aaa;
		color: white;
		transition: background-color 200ms ease-out;
	}
	a.footnote:hover,
	.newsfoot-footnote-popover + a.footnote {
		background: #666;
		transition: background-color 200ms ease-out;
	}

}

